--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Create Pull Request
       run: |
         DATE=$(date +'%Y-%m-%d')
-        gh pr create --base production --fill --title $DATE
+        gh pr create --base production --fill --label release --title $DATE
       env:
         GITHUB_TOKEN: ${{ github.token }}
       continue-on-error: true
