ci(github): update and rename create-release-pr.yml to release.yml

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,11 +1,11 @@
-name: Create Release PR
+name: Release
 on:
   push:
     branches:
       - master
 
 jobs:
-  create-release-pr:
+  release:
     runs-on: ubuntu-latest
 
     steps:
