--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -9,6 +9,9 @@ jobs:
       GITHUB_TOKEN: ${{ github.token }}
 
     steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+
     - name: Find Release PR
       run: |
         RELEASE_PR=$(gh pr list --label release --state open --json number --jq '.[0].number')
