--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -15,7 +15,7 @@ jobs:
 
     - name: Find Release PR
       run: |
-        RELEASE_PR=$(gh pr list --label release --state open --json number --jq '.[0].number')
+        RELEASE_PR=$(gh pr list --base production --label release --state open --json number --jq '.[0].number')
         echo "RELEASE_PR=$RELEASE_PR" >> $GITHUB_ENV
 
     - name: Convert open PRs to Draft
