--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -1,4 +1,4 @@
-name: Release
+name: Create Pull Request
 on:
   push:
     branches:
@@ -14,7 +14,7 @@ jobs:
     if: github.ref == 'refs/heads/master'
 
     steps:
-    - name: Checkout
+    - name: Checkout repository
       uses: actions/checkout@v3
       with:
         fetch-depth: 0
@@ -39,7 +39,7 @@ jobs:
     if: github.ref == 'refs/heads/production'
 
     steps:
-    - name: Checkout
+    - name: Checkout repository
       uses: actions/checkout@v3
 
     - name: Convert draft PRs to Ready
